--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,7 @@
     <footer class="container d-flex text-white py-2">
       <p>
         All contents &copy; 2019
-        <a href="https://www.linkedin.com/learning">LinkedIn Learning</a>. All
-        rights reserved.
+        <a href="#">Tada!!!</a>. All rights reserved.
       </p>
       <div class="ml-auto">
         <a class="d-block text-white" href="#">Terms of use</a>
